# best-gizmo-setup-wizard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/scripts/: index.js
docs/style/: index.css
installers/windows/: build_installer.ps1  win_installer_definition.iss
src/: app.rs  main.rs  pages.rs  utils.rs
src/assets/icons/: README.md
src/pages/: driver_station_setup.rs  student_starter_code.rs  system_firmware.rs
src/utils/: drive_management.rs  file_download.rs  github.rs  powershell.rs  shell.rs  threads.rs
