[package]
name = "best_gizmo_setup_wizard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
eframe = "0.31.1"
egui = "0.31.1"
egui_alignments = "0.3.4"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["jpeg"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
zip-extract = "0.2.2"
